# render-app

./: .dockerignore  CLAUDE.md  Dockerfile  main.py  pyproject.toml  render.yaml
app/: database.py
app/recipes/: models.py  router.py  service.py
templates/: index.html
templates/recipes/: add.html  list.html  view.html
templates/recipes/partials/: display_cuisine.html  display_name.html  display_notes.html  display_tags.html  edit_cuisine.html  edit_name.html  edit_notes.html  edit_tags.html  form_text.html  form_url.html  recipe_card.html  recipe_list.html  save_success.html  url_list.html
